Make volume slider fill grid column like dropdowns

--- a/src/control/control.css
+++ b/src/control/control.css
@@ -52,6 +52,11 @@ input[type="range"] {
   width: 120px;
 }
 
+/* Volume slider in .kv should fill column like dropdowns do */
+.kv > input[type="range"] {
+  width: 100%;
+}
+
 input[type="color"] {
   width: 32px;
   height: 32px;
